Fix consistent spacing for player controls, fix title text overflow in player footer

--- a/client/src/styles/library.module.css
+++ b/client/src/styles/library.module.css
@@ -253,8 +253,8 @@
 
 .trackImageWrap {
   position: relative;
-  height: 3rem;
-  width: 3rem;
+  min-height: 3rem;
+  min-width: 3rem;
   margin-right: 1rem;
   border-radius: 7px;
 
