--- a/client/src/styles/progressBar.module.css
+++ b/client/src/styles/progressBar.module.css
@@ -56,6 +56,10 @@
 }
 
 .timeContainer {
+  min-width: 38px;
+}
+
+.timeContainer {
   font-size: 11px;
   transition: 0.2s linear;
   color: #bbb;
